# feature_frontend

./: CMakeLists.txt  README.md  package.xml
include/feature_frontend/dualFisheye/: dualfisheyetracker.h
include/feature_frontend/feature_lib/: frontendinit.h
include/feature_frontend/feature_lib/frontendBase/: detector.h  detectorfast.h  detectorharris.h  feature_utils.h  featuretracker.h  frontendbase.h  frontendcamera.h  frontendparameter.h
include/feature_frontend/feature_lib/frontendMono/: frontendmono.h
include/feature_frontend/feature_lib/frontendStereo/: frontendstereo.h
include/feature_frontend/monotrackerRos/: monotrackerRos.h
include/feature_frontend/multistereo/: multistereotracker.h
include/feature_frontend/stereoTrackerRos/: stereotrackerRos.h
launch/: fourImages.launch  image_variance.launch  la.launch  maskGenerate.launch  mono.launch
scripts/: image_variance.m
src/: dualfisheye_node.cpp  image_variance.cpp  maskGenerater.cpp  monocam_node.cpp  multistereo_node.cpp  stereoPreprocess.cc  stereocam_node.cpp
src/dualFisheye/: dualfisheyetracker.cpp
src/feature_lib/: frontendinit.cpp
src/feature_lib/frontendBase/: detector.cpp  detectorfast.cpp  detectorharris.cpp  frontendbase.cpp  frontendcamera.cpp
src/feature_lib/frontendMono/: frontendmono.cpp
src/feature_lib/frontendStereo/: frontendstereo.cpp
src/monotrackerRos/: monotrackerRos.cpp
src/multistereo/: multistereotracker.cpp
src/stereoTrackerRos/: stereotrackerRos.cpp
